# glui

./: CMakeLists.txt
shaders/: basic.frag  basic.vert  gui.frag  gui.vert
src/: config.h  main.cpp
src/graphics/: camera.cpp  camera.h  shader.cpp  shader.h  uniform_container.cpp  uniform_container.h  window.cpp  window.h
src/systems/: file_manager.cpp  file_manager.h  renderer.cpp  renderer.h
src/ui/: ui_element.h
src/util/: color.h
